feat: remove endpoint to get scenario diagram
