# src/routers/router.js
@@ -31,11 +31,6 @@ module.exports = (opts = {}) => {
     validateScenario.validateUpdateScenarioName,
     scenariosController.updateScenarioName
   );
-  workflows.get(
-    '/:workflow_id/scenarios/:scenario_id/diagram',
-    baseValidator.validateUUID,
-    scenariosController.getDiagramForScenario
-  );
   
   const scenarios = Router();
   scenarios.prefix('/scenarios');
